--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/customer_db
-    username: darkroot
-    password: '@darKrOot3646'
+    username: root
+    password: password
   jpa:
     properties:
       hibernate:
