--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,14 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/customer_db
     username: root
     password: password
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        ddl-auto: none
     open-in-view: false
     show-sql: true
+    hibernate:
+      ddl-auto: none
+  profiles:
+    active: h2
 server:
   port: 8090
