--- a/src/main/resources/application-mysql.yaml
+++ b/src/main/resources/application-mysql.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/customer_db
+    url: jdbc:mysql://remotemysql.com:3306/pNcPq11wWY
   jpa:
     properties:
       hibernate:
