--- a/src/main/resources/application-mysql.yaml
+++ b/src/main/resources/application-mysql.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://remotemysql.com:3306/pNcPq11wWY
+    url: jdbc:mysql://${SERVER:localhost}:${PORT:3306}/${DATABASE:customer_db}
   jpa:
     properties:
       hibernate:
