--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    username: pNcPq11wWY
-    password: XL6MaQl60X
+    username: ${USER:root}
+    password: ${PASSWORD:password}
   jpa:
     open-in-view: false
     show-sql: true
     hibernate:
       ddl-auto: none
   profiles:
-    active: mysql
+    active: ${ACTIVE_PROFILE:mysql}
 server:
   port: 8090
