--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    username: ${USER:root}
-    password: ${PASSWORD:password}
+    username: ${DM_CRM_USERNAME:root}
+    password: ${DM_CRM_PASSWORD:password}
   jpa:
     open-in-view: false
     show-sql: true
     hibernate:
       ddl-auto: none
   profiles:
-    active: ${ACTIVE_PROFILE:mysql}
+    active: ${DM_CRM_ACTIVE_PROFILE:h2}
 server:
   port: 8090
